--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
+    "@types/leaflet": "^1.9.18",
     "@types/node": "^22.15.17",
     "@types/node-fetch": "^2.6.12",
     "autoprefixer": "^10.4.21",
